--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Play Music</string>
+    <string name="app_name">Music Player</string>
     <string name="channel_name"> Music Player</string>
     <string name="channel_description">Music Playing</string>
 </resources>
